Creado metodo get pero no funciona la conexion con la base de datos

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=backend
+
+# Configuración de la conexión a PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/karenapp
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=1234
