--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^3.4.2",
+    "axios": "^1.6.8",
     "lightweight-charts": "^4.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
